[tool.poetry]
name = "ws-api-docs"
version = "0.1.0"
description = ""
authors = ["spavlyuk <spavlyuk@digitex.io>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
